--- a/hoivien.html
+++ b/hoivien.html
@@ -213,10 +213,11 @@ hoặc thanh toán hoàn toàn với 200.000 nhom12 Point</p>
             <div class="footer">
                     <img src="https://cdn.glitch.global/2745b7c7-87eb-459a-949f-fc648cf93057/Untitled-1.png?v=1662558393072" alt="">
                     <P><a href="https://chipped-precious-nut.glitch.me/signin.html"> Chính sách khách hàng thường xuyên</a> | <a href="https://chipped-precious-nut.glitch.me/signin.html">Chính sách bảo mật thông tin</a> | <a href="https://chipped-precious-nut.glitch.me/signin.html">Điều khoản sử dụng</a></P>
-                    <P>Giấy CNĐKDN: 0302575928, đăng ký lần đầu ngày 02/05/2008, đăng ký thay đổi lần thứ 10 ngày 30/03/2018, cấp bởi Nhà cái đến từ Châu Âu</P>
-                    <P>Địa chỉ: 202A5 UNIVERSITY OF TRANSPORT AND COMMUNICATIONS</P>
-                    <P>Hotline: 19008198</P>
-                    <P>COPYRIGHT © NHOM12 - ALL RIGHTS RESERVED.</P>
+                    <p>CÔNG TY TNHH NHÓM 12 CINEMA VIỆT NAM</p>
+                    <p>Giấy CNĐKDN: 0302575928, đăng ký lần đầu ngày 10/10/2022, cấp bởi Sở KHĐT Thành phố Hà Nội</p>
+                    <p>Địa chỉ: Tầng 3, Trường Đại Học GTVT, số 3, Phố Cầu Giấy, Quận Đống Đa, TP.Hà Nội, Việt Nam</p>
+                    <p>Hotline: (012) 3456 9876</p>
+                    <p class="copy">COPYRIGHT © NHOM12 - ALL RIGHTS RESERVED.</p>
             </div>
     </div>
 </body>
