--- a/quatang.html
+++ b/quatang.html
@@ -1,218 +1,298 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link
-          rel="shorcut icon"
-          type="image/png"
-          href="https://cdn.glitch.global/2c8b0daf-f130-49e4-8e91-ab73cffb4a3f/nhom12..png?v=1665660343284s"
-  />
-  <title>Gift</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"/>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-  <link
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shorcut icon"
+      type="image/png"
+      href="https://cdn.glitch.global/2c8b0daf-f130-49e4-8e91-ab73cffb4a3f/nhom12..png?v=1665660343284s"
+    />
+    <title>Gift</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       type="text/css"
       href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
-  <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body>
-  <div class="bar">
-    <div class="header_inner">
-      <ul class="menu">
-        <li class="menu_item logo_img"><a href="phim-user.html"><img src="https://cdn.glitch.global/2745b7c7-87eb-459a-949f-fc648cf93057/Untitled-1.png?v=1662558393072" alt="" class="logo-img"></a></li>
-        <li class="menu_item"><a href="phim-user.html" class="menu_link">Home</a></li>
-        <li class="menu_item movies">
-          <span class="menu_link">Movies</span>
-          <div class="movies_1">
-            <div class="menu_child">
-              <div class="menu_child_list-1">
-                <ul>
-                  <li class="menu_child_item">Popular</li>
-                  <li class="menu_child_item">Now Playing</li>
-                  <li class="menu_child_item">Upcoming</li>
-                  <li class="menu_child_item">Top Rated</li>
-                </ul>             
-              </div>
-              <div class="menu_child_list-1">
-                <ul>
-                  <li class="menu_child_item">Action</li>
-                  <li class="menu_child_item">Adventure</li>
-                  <li class="menu_child_item">Comedy</li>
-                  <li class="menu_child_item">Crime & Gangster</li>  
-                </ul>
-              </div>
-              <div class="menu_child_list-1">
-                <ul>
-                  <li class="menu_child_item">Epics/Hisorical</li>
-                  <li class="menu_child_item">Horror</li>
-                  <li class="menu_child_item">Mucicals</li>
-                  <li class="menu_child_item">Romance</li>
-                </ul>              
-              </div>
-              <div class="menu_child_list-1">
-                <ul>
-                  <li class="menu_child_item">Science Fiction</li>
-                  <li class="menu_child_item">Sitcom movie</li>
-                  <li class="menu_child_item">War (anti-war)</li>
-                  <li class="menu_child_item">Westerns films</li>
-                </ul>        
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+  <body>
+    <div class="bar">
+      <div class="header_inner">
+        <ul class="menu">
+          <li class="menu_item logo_img">
+            <a href="phim-user.html"
+              ><img
+                src="https://cdn.glitch.global/2745b7c7-87eb-459a-949f-fc648cf93057/Untitled-1.png?v=1662558393072"
+                alt=""
+                class="logo-img"
+            /></a>
+          </li>
+          <li class="menu_item">
+            <a href="phim-user.html" class="menu_link">Home</a>
+          </li>
+          <li class="menu_item movies">
+            <span class="menu_link">Movies</span>
+            <div class="movies_1">
+              <div class="menu_child">
+                <div class="menu_child_list-1">
+                  <ul>
+                    <li class="menu_child_item">Popular</li>
+                    <li class="menu_child_item">Now Playing</li>
+                    <li class="menu_child_item">Upcoming</li>
+                    <li class="menu_child_item">Top Rated</li>
+                  </ul>
+                </div>
+                <div class="menu_child_list-1">
+                  <ul>
+                    <li class="menu_child_item">Action</li>
+                    <li class="menu_child_item">Adventure</li>
+                    <li class="menu_child_item">Comedy</li>
+                    <li class="menu_child_item">Crime & Gangster</li>
+                  </ul>
+                </div>
+                <div class="menu_child_list-1">
+                  <ul>
+                    <li class="menu_child_item">Epics/Hisorical</li>
+                    <li class="menu_child_item">Horror</li>
+                    <li class="menu_child_item">Mucicals</li>
+                    <li class="menu_child_item">Romance</li>
+                  </ul>
+                </div>
+                <div class="menu_child_list-1">
+                  <ul>
+                    <li class="menu_child_item">Science Fiction</li>
+                    <li class="menu_child_item">Sitcom movie</li>
+                    <li class="menu_child_item">War (anti-war)</li>
+                    <li class="menu_child_item">Westerns films</li>
+                  </ul>
+                </div>
               </div>
             </div>
-          </div>
-        </li>
-        <li class="menu_item more">
-          <a class="menu_link" href="">More</a>
-          <div class="menu_child-2">
-            <ul class="menu_child_list-2">
-              <li class="menu_child_item">Discussions</li>
-              <li class="menu_child_item">Leaderboard</li>
-              <li class="menu_child_item">Support</li>
-              <li class="menu_child_item">API</li>
+          </li>
+          <li class="menu_item more">
+            <a class="menu_link" href="">More</a>
+            <div class="menu_child-2">
+              <ul class="menu_child_list-2">
+                <li class="menu_child_item">Discussions</li>
+                <li class="menu_child_item">Leaderboard</li>
+                <li class="menu_child_item">Support</li>
+                <li class="menu_child_item">API</li>
+              </ul>
+            </div>
+          </li>
+          <li class="menu_item"><a class="menu_link" href="">Contact</a></li>
+        </ul>
+      </div>
+      <div class="account">
+        <a href="" class="account-inner">
+          <i class="fa-solid fa-user icon"></i>
+          <span class="menu_link">Xin chào, User</span>
+          <div class="account-type">
+            <ul class="account-child">
+              <li class="menu_child_item">
+                <a href="user.html" class="account-item">Quản lý tài khoản</a>
+              </li>
+              <li class="menu_child_item">
+                <a href="vexemphim.html" class="account-item"
+                  >Quản lý vé xem phim</a
+                >
+              </li>
+              <li class="menu_child_item">
+                <a href="quatang.html" class="account-item">Quà tặng</a>
+              </li>
+              <li class="menu_child_item">
+                <a href="hoivien.html" class="account-item">Hội viên</a>
+              </li>
+              <li class="menu_child_item">
+                <a href="phim.html" class="account-item">Đăng xuất</a>
+              </li>
             </ul>
           </div>
-        </li>
-        <li class="menu_item"><a class="menu_link" href="">Contact</a></li>
-      </ul>
-    </div>
-    <div class="account">
-      <a href="" class="account-inner">
-        <i class="fa-solid fa-user icon"></i>
-        <span class="menu_link">Xin chào, User</span>
-        <div class="account-type">
-          <ul class="account-child">
-            <li class="menu_child_item"><a href="user.html" class="account-item">Quản lý tài khoản</a></li>
-            <li class="menu_child_item"><a href="vexemphim.html" class="account-item">Quản lý vé xem phim</a></li>
-            <li class="menu_child_item"><a href="quatang.html" class="account-item">Quà tặng</a></li>
-            <li class="menu_child_item"><a href="hoivien.html" class="account-item">Hội viên</a></li>
-            <li class="menu_child_item"><a href="phim.html" class="account-item">Đăng xuất</a></li>
-          </ul>
-        </div>
-      </a> 
-    </div>
-  </div>
-  <div class="header">
-    <div class="advert">
-      <p><img src="./imgs/qc2.webp" style="max-width: 100%;"  alt="anhr ddepj"></p>
-    </div>
-  </div>
-
-  <div class="slider">
-    <img src="./assets/img/slider/slider.jpg" alt="" class="img-slider">
-  </div>
-    
-  <div class="content">
-    <div class="gift-list">
-
-      <div class="gift">
-        <h1>ƯU ĐÃI MỖI NGÀY</h1>
+        </a>
       </div>
-      <div class="box1">
-        <div class="gift-items">
-          <img src="./assets/img/gift/gift1.jpg" alt="Group 12 Combo" class="gift-img">
-          <div class="gift-body">
-            <h3 class="gift-heading">Group 12 Combo 7h</h3>
-            <p class="gift-content">Free 1 bỏng ngô + 1 nước uống khi mua vé và xem phim tại rạp vào sau 7h các ngày trong tuần</p>
-            <p class="gift-sub-content">Free thêm 1 bỏng ngô + 1 nước uống khi đi theo nhóm từ hai người trở lên</p>
+    </div>
+    <div class="header">
+      <div class="advert">
+        <p>
+          <img src="./imgs/qc2.webp" style="max-width: 100%" alt="anhr ddepj" />
+        </p>
+      </div>
+    </div>
+
+    <div class="slider">
+      <img src="./assets/img/slider/slider.jpg" alt="" class="img-slider" />
+    </div>
+
+    <div class="content">
+      <div class="gift-list">
+        <div class="gift">
+          <h1>ƯU ĐÃI MỖI NGÀY</h1>
+        </div>
+        <div class="box1">
+          <div class="gift-items">
+            <img
+              src="./assets/img/gift/gift1.jpg"
+              alt="Group 12 Combo"
+              class="gift-img"
+            />
+            <div class="gift-body">
+              <h3 class="gift-heading">Group 12 Combo 7h</h3>
+              <p class="gift-content">
+                Free 1 bỏng ngô + 1 nước uống khi mua vé và xem phim tại rạp vào
+                sau 7h các ngày trong tuần
+              </p>
+              <p class="gift-sub-content">
+                Free thêm 1 bỏng ngô + 1 nước uống khi đi theo nhóm từ hai người
+                trở lên
+              </p>
+            </div>
+          </div>
+
+          <div class="gift-items">
+            <img
+              src="./assets/img/gift/gift1.jpg"
+              alt="Group 12 Combo"
+              class="gift-img"
+            />
+            <div class="gift-body">
+              <h3 class="gift-heading">Group 12 Combo Weekend</h3>
+              <p class="gift-content">
+                Free 1 bỏng ngô + 1 nước uống khi mua vé và xem phim tại rạp vào
+                hai ngày cuối tuần
+              </p>
+              <p class="gift-sub-content">
+                Free thêm 1 bỏng ngô + 1 nước uống khi đi theo nhóm từ hai người
+                trở lên
+              </p>
+            </div>
           </div>
         </div>
 
-        <div class="gift-items">
-          <img src="./assets/img/gift/gift1.jpg" alt="Group 12 Combo" class="gift-img">
-          <div class="gift-body">
-            <h3 class="gift-heading">Group 12 Combo Weekend</h3>
-            <p class="gift-content">Free 1 bỏng ngô + 1 nước uống khi mua vé và xem phim tại rạp vào hai ngày cuối tuần</p>
-            <p class="gift-sub-content">Free thêm 1 bỏng ngô + 1 nước uống khi đi theo nhóm từ hai người trở lên</p>
+        <div class="gift">
+          <h1>ƯU ĐÃI MỖI TUẦN</h1>
+        </div>
+        <div class="box2">
+          <div class="gift-items">
+            <img
+              src="./assets/img/gift/gift2.jpg"
+              alt="Group 12 Combo"
+              class="gift-img"
+            />
+            <div class="gift-body">
+              <h3 class="gift-heading">Group 12 Combo Two Week</h3>
+              <p class="gift-content">
+                Khách hàng mua vé và xem phim tại rạp chiếu phim trong hai tuần
+                liên tiếp sẽ được giảm 5% giá vé trong tuần thứ 2
+              </p>
+              <p class="gift-sub-content">
+                Giảm lên đến 10% giá vé nếu cả nhóm từ 2 người trở lên đến rạp
+                trong hai tuần liên tiếp
+              </p>
+            </div>
           </div>
         </div>
       </div>
-      
-
-      <div class="gift">
-        <h1>ƯU ĐÃI MỖI TUẦN</h1>
-      </div>
-      <div class="box2">
-        <div class="gift-items">
-          <img src="./assets/img/gift/gift2.jpg" alt="Group 12 Combo" class="gift-img">
-          <div class="gift-body">
-           <h3 class="gift-heading">Group 12 Combo Two Week</h3>
-           <p class="gift-content">Khách hàng mua vé và xem phim tại rạp chiếu phim trong hai tuần liên tiếp sẽ được giảm 5% giá vé trong tuần thứ 2</p>
-           <p class="gift-sub-content">Giảm lên đến 10% giá vé nếu cả nhóm từ 2 người trở lên đến rạp trong hai tuần liên tiếp</p>
-          </div>
-        </div>
-      </div>
-
-    </div>  
       <!-- <div class="content-img">
        <img src="./assets/img/content/content.jpg" alt="">
       </div> -->
-  </div>
+    </div>
 
-  <div class="gift">
-    <h1>ƯU ĐÃI MỖI THÁNG</h1> 
-  </div>
-  <div class="box3">
-    <div class="gift-items">
-      <img src="./assets/img/gift/gift2.jpg" alt="Group 12 Combo" class="gift-img">
-      <div class="gift-body">
-       <h3 class="gift-heading">Group 12 Combo Month</h3>
-       <p class="gift-content">Khách hàng có thẻ đăng kí mua vé mỗi tháng (thẻ VIP) sẽ nhận được 1 vé xem phim 2D miễn phí vào mỗi tháng</p>
-       <p class="gift-sub-content">Khi mua vé lần đầu tiên trong tháng sẽ được giảm 10% giá vé</p>
+    <div class="gift">
+      <h1>ƯU ĐÃI MỖI THÁNG</h1>
+    </div>
+    <div class="box3">
+      <div class="gift-items">
+        <img
+          src="./assets/img/gift/gift2.jpg"
+          alt="Group 12 Combo"
+          class="gift-img"
+        />
+        <div class="gift-body">
+          <h3 class="gift-heading">Group 12 Combo Month</h3>
+          <p class="gift-content">
+            Khách hàng có thẻ đăng kí mua vé mỗi tháng (thẻ VIP) sẽ nhận được 1
+            vé xem phim 2D miễn phí vào mỗi tháng
+          </p>
+          <p class="gift-sub-content">
+            Khi mua vé lần đầu tiên trong tháng sẽ được giảm 10% giá vé
+          </p>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="gift">
-    <h1>ƯU ĐÃI KHI ĐI THEO NHÓM</h1>
-  </div>
-  <div class="box4">
-    <div class="gift-items">
-      <img src="./assets/img/gift/gift3.jpg" alt="Group 12 Combo" class="gift-img">
-      <div class="gift-body">
-       <h3 class="gift-heading">Group 12 Combo Couple, Triple</h3>
-       <p class="gift-content">Giảm 6% giá vé khi đi theo nhóm hai đến ba người</p>
-       <p class="gift-sub-content">Free 1 bỏng ngô + 2 nước uống khi mua vé và xem phim tại rạp</p>
+    <div class="gift">
+      <h1>ƯU ĐÃI KHI ĐI THEO NHÓM</h1>
+    </div>
+    <div class="box4">
+      <div class="gift-items">
+        <img
+          src="./assets/img/gift/gift3.jpg"
+          alt="Group 12 Combo"
+          class="gift-img"
+        />
+        <div class="gift-body">
+          <h3 class="gift-heading">Group 12 Combo Couple, Triple</h3>
+          <p class="gift-content">
+            Giảm 6% giá vé khi đi theo nhóm hai đến ba người
+          </p>
+          <p class="gift-sub-content">
+            Free 1 bỏng ngô + 2 nước uống khi mua vé và xem phim tại rạp
+          </p>
+        </div>
+      </div>
+
+      <div class="gift-items">
+        <img
+          src="./assets/img/gift/gift3.jpg"
+          alt="Group 12 Combo"
+          class="gift-img"
+        />
+        <div class="gift-body">
+          <h3 class="gift-heading">Group 12 Combo Quadruple</h3>
+          <p class="gift-content">
+            Giảm 9% giá vé khi đi theo nhóm bốn người trở lên
+          </p>
+          <p class="gift-sub-content">
+            Free 2 bỏng ngô + 3 nước uống khi mua vé và xem phim tại rạp
+          </p>
+        </div>
       </div>
     </div>
-  
-    <div class="gift-items">
-      <img src="./assets/img/gift/gift3.jpg" alt="Group 12 Combo" class="gift-img">
-      <div class="gift-body">
-       <h3 class="gift-heading">Group 12 Combo Quadruple</h3>
-       <p class="gift-content">Giảm 9% giá vé khi đi theo nhóm bốn người trở lên</p>
-       <p class="gift-sub-content">Free 2 bỏng ngô + 3 nước uống khi mua vé và xem phim tại rạp</p>
-      </div>
-    </div>  
-  </div>
 
-  
-  <div id="footer">
-    <div class="footer_inner">
-      <ul class="footer_link">
-        <li class="vach">Chính Sách Khách Hàng Thường Xuyên</li>
-        <li class="vach">Chính Sách Bảo Mật Thông Tin</li>
-        <li>Điều Khoản Sử Dụng</li>
-      </ul>
+    <div id="footer">
+      <div class="footer_inner">
+        <ul class="footer_link">
+          <li class="vach">Chính Sách Khách Hàng Thường Xuyên</li>
+          <li class="vach">Chính Sách Bảo Mật Thông Tin</li>
+          <li>Điều Khoản Sử Dụng</li>
+        </ul>
 
-      <div class="company_info">
-        <p>CÔNG TY TNHH NHÓM 12 CINEMA VIỆT NAM</p>
-        <p>Giấy CNĐKDN: 0302575928, đăng ký lần đầu ngày 02/05/2008, đăng ký thay đổi lần thứ 10 ngày 30/03/2018, cấp bởi Sở KHĐT Thành phố Hà Nội</p>
-        <p>Địa chỉ: Tầng 3, Trường Đại Học GTVT, số 3, Phố Cầu Giấy, Quận Đống Đa, TP.Hà Nội, Việt Nam</p>
-        <p>Hotline: (012) 3456 9876</p>
-        <p class="copy">COPYRIGHT © LOTTECINEMAVN.COM - ALL RIGHTS RESERVED.</p>
+        <div class="company_info">
+          <p>CÔNG TY TNHH NHÓM 12 CINEMA VIỆT NAM</p>
+          <p>Giấy CNĐKDN: 0302575928, đăng ký lần đầu ngày 10/10/2022, cấp bởi Sở KHĐT Thành phố Hà Nội</p>
+          <p>Địa chỉ: Tầng 3, Trường Đại Học GTVT, số 3, Phố Cầu Giấy, Quận Đống Đa, TP.Hà Nội, Việt Nam</p>
+          <p>Hotline: (012) 3456 9876</p>
+          <p class="copy">COPYRIGHT © NHOM12 - ALL RIGHTS RESERVED.</p>
+        </div>
       </div>
     </div>
-  </div>
-
-  
-</body>
+  </body>
 </html>
