--- a/signin.html
+++ b/signin.html
@@ -92,10 +92,11 @@
             </a>
           </div>
           <div class="footer-infor">
-            <p>Giấy CNĐKDN: 0302575928, đăng ký lần đầu ngày 02/05/2008, đăng ký thay đổi lần thứ 10 ngày 30/03/2018, cấp bởi Nhà cái đến từ Châu Âu</p>
-            <p>Địa chỉ: 202A5 UNIVERSITY OF TRANSPORT AND COMMUNICATIONS</p>
-            <p>Hotline: 19008198 </p>   
-            <p>COPYRIGHT © NHOM12 - ALL RIGHTS RESERVED.</p>
+            <p>CÔNG TY TNHH NHÓM 12 CINEMA VIỆT NAM</p>
+            <p>Giấy CNĐKDN: 0302575928, đăng ký lần đầu ngày 10/10/2022, cấp bởi Sở KHĐT Thành phố Hà Nội</p>
+            <p>Địa chỉ: Tầng 3, Trường Đại Học GTVT, số 3, Phố Cầu Giấy, Quận Đống Đa, TP.Hà Nội, Việt Nam</p>
+            <p>Hotline: (012) 3456 9876</p>
+            <p class="copy">COPYRIGHT © NHOM12 - ALL RIGHTS RESERVED.</p>
           </div>  
         </div>
       </div>
