--- a/vexemphim.html
+++ b/vexemphim.html
@@ -431,11 +431,11 @@
     
     <div id="footer">
       <div class="foot_Img">
-        <img src="https://media.lottecinemavn.com/Media/WebAdmin/c3702e0ecbe645ab8bced4e4e5a6313d.jpg" width="980" alt="Bottom 1 Black Adam Sneak">
+        <img src="./imgs/slide1.png" width="980" alt="Bottom 1 Black Adam Sneak">
       </div>
 
       <div class="foot_Img">
-        <img src="http://127.0.0.1:5500/Nhom12/baitaplon/imgs/slide4.jpg" width="980" height="372" alt="Bottom 2 BPanther Combo 5">
+        <img src="./imgs/slide2.jpg" width="980" height="372" alt="Bottom 2 BPanther Combo 5">
       </div>
 
       <div class="footer_inner">
@@ -447,10 +447,10 @@
 
         <div class="company_info">
           <p>CÔNG TY TNHH NHÓM 12 CINEMA VIỆT NAM</p>
-          <p>Giấy CNĐKDN: 0302575928, đăng ký lần đầu ngày 02/05/2008, đăng ký thay đổi lần thứ 10 ngày 30/03/2018, cấp bởi Sở KHĐT Thành phố Hà Nội</p>
+          <p>Giấy CNĐKDN: 0302575928, đăng ký lần đầu ngày 10/10/2022, cấp bởi Sở KHĐT Thành phố Hà Nội</p>
           <p>Địa chỉ: Tầng 3, Trường Đại Học GTVT, số 3, Phố Cầu Giấy, Quận Đống Đa, TP.Hà Nội, Việt Nam</p>
           <p>Hotline: (012) 3456 9876</p>
-          <p class="copy">COPYRIGHT © LOTTECINEMAVN.COM - ALL RIGHTS RESERVED.</p>
+          <p class="copy">COPYRIGHT © NHOM12 - ALL RIGHTS RESERVED.</p>
         </div>
       </div>
     </div> 
